--- a/site/barcodes.html
+++ b/site/barcodes.html
@@ -41,6 +41,7 @@
       <li>EAN-8</li>
       <li>Code39</li>
       <li>Code93</li>
+      <li>Code25 (2 of 5)</li>
     </ul>
 
     <h2>Writing your own barcode class</h2>
