code128b.png => code39.png

--- a/site/index.html
+++ b/site/index.html
@@ -70,7 +70,7 @@ File.open('code39.png'){|f|
   f.write barcode.to_png
 }</code></pre>
 
-    <img src="code128b.png" alt="Code 39 example" class="barcode" />
+    <img src="code39.png" alt="Code 39 example" class="barcode" />
 
     <p>
       Or if you want to create a GIF instead, the <code>RmagickOutputter</code> has that functionality:
