--- a/site/barcodes.html
+++ b/site/barcodes.html
@@ -73,5 +73,9 @@
       This string is what the outputter classes use as input when generating images etc for a barcode.
     </p>
 
+    <p id="footer">
+      <a href="http://tore.darell.no/">I</a> made this.
+    </p>
+
   </body>
 </html>
