--- a/site/howto.html
+++ b/site/howto.html
@@ -56,5 +56,9 @@ print barcode.to_png</code></pre>
 
     <pre><code>ruby make_barcode.rb &gt; barcode.png</code></pre>
 
+    <p id="footer">
+      <a href="http://tore.darell.no/">I</a> made this.
+    </p>
+
   </body>
 </html>
