--- a/site/index.html
+++ b/site/index.html
@@ -86,5 +86,9 @@ File.open('code128B.gif'){|f|
 
     <img src="code128b.gif" alt="Code 128B example" class="barcode" />
 
+    <p id="footer">
+      <a href="http://tore.darell.no/">I</a> made this.
+    </p>
+
   </body>
 </html>
