--- a/site/outputters.html
+++ b/site/outputters.html
@@ -80,5 +80,9 @@ canvas = barcode.to_canvas</code></pre>
       passed to it through the barcode's proxy method.
     </p>
 
+    <p id="footer">
+      <a href="http://tore.darell.no/">I</a> made this.
+    </p>
+
   </body>
 </html>
