--- a/site/index.html
+++ b/site/index.html
@@ -29,7 +29,7 @@
       Barby is a Ruby barcode generator that doesn't rely on 3rd party libraries - it's
       all in Ruby. Of course, if you want it to do something useful - like generate images -
       you'll probably <em>want</em> to use an external, non-Ruby library for that. But the
-      most central part - the barcode part - is pure Ruby.
+      most central part (the barcode part) is pure Ruby.
     </p>
 
     <p>
