--- a/site/outputters.html
+++ b/site/outputters.html
@@ -26,10 +26,10 @@
     </ul>
 
     <p>
-      An <strong>Outputter</strong> is responsible for taking a barcode object and do
+      An <strong>Outputter</strong> is responsible for taking a barcode object and doing
       something with it. The "something" part is usually to create a graphical representation
       of the barcode in the form of an image or some sort of vector graphic. For example,
-      there is already outputters that use <a href="http://rmagick.rubyforge.org/">RMagick</a>
+      there are already outputters that use <a href="http://rmagick.rubyforge.org/">RMagick</a>
       and <a href="http://www.cairographics.org/">Cairo</a> to create PNG, GIF, PDF, SVG and more.
     </p>
 
