--- a/howto.html
+++ b/howto.html
@@ -21,6 +21,7 @@
       <li><a href="index.html">Home</a></li>
       <li class="current"><a href="howto.html">Howto</a></li>
       <li><a href="rdoc">RDoc</a></li>
+      <li><a href="http://groups.google.com/group/ruby-barby">Google group</a></li>
       <li><a href="barcodes.html">Barcodes</a></li>
       <li><a href="outputters.html">Outputters</a></li>
     </ul>
