Add 2 of 5 to list

--- a/barcodes.html
+++ b/barcodes.html
@@ -46,7 +46,13 @@
         <li>EAN-8</li>
         <li>Code39</li>
         <li>Code93</li>
-        <li>Code25 (2 of 5)</li>
+        <li>
+          Code25 (2 of 5)
+          <ul>
+            <li>Interleaved 2 of 5</li>
+            <li>IATA 2 of 5</li>
+          </ul>
+        </li>
       </ul>
       </li>
       <li>2D
