--- a/site/outputters.html
+++ b/site/outputters.html
@@ -21,6 +21,7 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="howto.html">Howto</a></li>
       <li><a href="rdoc">RDoc</a></li>
+      <li><a href="http://github.com/toretore/barby">GitHub</a></li>
       <li><a href="barcodes.html">Barcodes</a></li>
       <li class="current"><a href="outputters.html">Outputters</a></li>
     </ul>
