--- a/site/index.html
+++ b/site/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Barby</title>
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
+    <meta content="0;url=http://toretore.github.com/barby" http-equiv="refresh"/>
     <link href="style.css" media="screen" rel="stylesheet" type="text/css" />
     <!--
     <link href="syntax.css" media="screen" rel="stylesheet" type="text/css" />
