--- a/outputters.html
+++ b/outputters.html
@@ -20,7 +20,7 @@
     <ul id="menu">
       <li><a href="index.html">Home</a></li>
       <li><a href="howto.html">Howto</a></li>
-      <li><a href="rdoc">RDoc</a></li>
+      <li><a href="http://barby.rubyforge.org/rdoc/">RDoc</a></li>
       <li><a href="http://groups.google.com/group/ruby-barby">Google group</a></li>
       <li><a href="barcodes.html">Barcodes</a></li>
       <li class="current"><a href="outputters.html">Outputters</a></li>
